# BlastEngine

./: CMakeLists.txt  README.md
include/blast/: core.h  particle.h  precision.h
libs/GLAD/include/glad/: gl.h  glad.h
libs/GLAD/src/: glad.c
shaders/: basic_vertex_shader.glsl  fragment_shader.glsl
src/: main.cpp  particle.cpp
